--- a/container.yml
+++ b/container.yml
@@ -1,8 +1,6 @@
 --- 
-- 
+- hosts: all
   become: true
-  hosts: all
   tasks: 
-    - 
-      name: "create docker container"
-      shell: "docker run -d --name jon -p 1234:8080 ponraj0204/jon"
+        - name: create docker container
+          shell: docker run -d --name webapp_container -p 1234:8080 srv_demo
